manifest/out/5-ks-core.yaml
---
# Source: ks-core/templates/ks-controller-manager.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ks-controller-manager
    tier: backend
    version: v3.1.0
  name: ks-controller-manager
  namespace: kubesphere-system
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    app: ks-controller-manager
    tier: backend
    # version: v3.1.0
  sessionAffinity: None
  type: ClusterIP
---
# Source: ks-core/templates/ks-controller-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ks-controller-manager
    tier: backend
    version: v3.1.0
  name: ks-controller-manager
  namespace: kubesphere-system
spec:
  strategy:
    rollingUpdate:
      maxSurge: 0
    type: RollingUpdate
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ks-controller-manager
      tier: backend
      # version: v3.1.0
  template:
    metadata:
      labels:
        app: ks-controller-manager
        tier: backend
        # version: v3.1.0
    spec:
      containers:
        - command:
            - controller-manager
            - --logtostderr=true
            - --leader-elect=true
            - --kubeconfig=/etc/kubeconfig/kubeconfig
          image: kubesphere/ks-controller-manager:v3.1.0
          imagePullPolicy: IfNotPresent
          name: ks-controller-manager
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources:
            limits:
              cpu: 1
              memory: 1000Mi
            requests:
              cpu: 30m
              memory: 50Mi
          volumeMounts:
            - mountPath: /etc/kubesphere/
              name: kubesphere-config
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: webhook-secret
            - mountPath: /var/lib/kubelet/plugins/
              name: kubelet-plugin
            - mountPath: /etc/localtime
              name: host-time
            - mountPath: /etc/kubeconfig
              name: kubeconfig
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccountName: kubesphere
      terminationGracePeriodSeconds: 30
      volumes:
        - name: kubesphere-config
          configMap:
            name: kubesphere-config
            defaultMode: 420
        - name: webhook-secret
          secret:
            defaultMode: 420
            secretName: ks-controller-manager-webhook-cert
        - name: kubelet-plugin
          hostPath:
            path: /var/lib/kubelet/plugins/
            type: DirectoryOrCreate
        - hostPath:
            path: /etc/localtime
            type: ""
          name: host-time
        - name: kubeconfig
          configMap:
            defaultMode: 420
            name: kubeconfig
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
        - key: CriticalAddonsOnly
          operator: Exists
        - effect: NoExecute
          key: node.kubernetes.io/not-ready
          operator: Exists
          tolerationSeconds: 60
        - effect: NoExecute
          key: node.kubernetes.io/unreachable
          operator: Exists
          tolerationSeconds: 60
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/master
                    operator: In
                    values:
                      - ""
---
# Source: ks-core/templates/kubesphere-controls-system.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  labels:
    app: kubesphere
    component: kubesphere-router
  annotations:
    kubernetes.io/created-by: kubesphere.io/ks-router
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: kubesphere
    component: kubesphere-router
---
# Source: ks-core/templates/kubesphere-controls-system.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-http-backend
  labels:
    app: kubesphere
    component: kubesphere-router
    version: express-1.0.alpha
  annotations:
    kubernetes.io/created-by: kubesphere.io/ks-router
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubesphere
      component: kubesphere-router
  template:
    metadata:
      labels:
        app: kubesphere
        component: kubesphere-router
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: default-http-backend
          # Any image is permissible as long as:
          # 1. It serves a 404 page at /
          # 2. It serves 200 on a /healthz endpoint
          image: mirrorgooglecontainers/defaultbackend-amd64:1.4
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 10m
              memory: 20Mi
            requests:
              cpu: 10m
              memory: 20Mi
---
---
# Source: ks-core/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: users.iam.kubesphere.io
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFakNDQWZxZ0F3SUJBZ0lRTEVZTnVlNFIrZURaZy9OM3dUNUJBVEFOQmdrcWhraUc5dzBCQVFzRkFEQWoKTVNFd0h3WURWUVFERXhocmN5MWpiMjUwY205c2JHVnlMVzFoYm1GblpYSXRZMkV3SGhjTk1qRXdOVEU0TURjMApNRE15V2hjTk16RXdOVEUyTURjME1ETXlXakFqTVNFd0h3WURWUVFERXhocmN5MWpiMjUwY205c2JHVnlMVzFoCmJtRm5aWEl0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUQyOEJvMzNmR3IKLzN3T0w0Y2Y1LzJnN1o1WlhnTitoTTJpSE4vOXhNaE1rNE1qbVJFd2RDNGtrVGdEa0FYWWh6dnpWQ21vZDBDYQpUWHk0KzMyV1Z [...]
      service:
        name: ks-controller-manager
        namespace: kubesphere-system
        path: /validate-email-iam-kubesphere-io-v1alpha2
        port: 443
    failurePolicy: Fail
    matchPolicy: Exact
    name: users.iam.kubesphere.io
    namespaceSelector:
      matchExpressions:
        - key: control-plane
          operator: DoesNotExist
    objectSelector: {}
    rules:
      - apiGroups:
          - iam.kubesphere.io
        apiVersions:
          - v1alpha2
        operations:
          - CREATE
          - UPDATE
        resources:
          - users
        scope: '*'
    sideEffects: None
    timeoutSeconds: 30
---
# Source: ks-core/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: network.kubesphere.io
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFakNDQWZxZ0F3SUJBZ0lRTEVZTnVlNFIrZURaZy9OM3dUNUJBVEFOQmdrcWhraUc5dzBCQVFzRkFEQWoKTVNFd0h3WURWUVFERXhocmN5MWpiMjUwY205c2JHVnlMVzFoYm1GblpYSXRZMkV3SGhjTk1qRXdOVEU0TURjMApNRE15V2hjTk16RXdOVEUyTURjME1ETXlXakFqTVNFd0h3WURWUVFERXhocmN5MWpiMjUwY205c2JHVnlMVzFoCmJtRm5aWEl0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUQyOEJvMzNmR3IKLzN3T0w0Y2Y1LzJnN1o1WlhnTitoTTJpSE4vOXhNaE1rNE1qbVJFd2RDNGtrVGdEa0FYWWh6dnpWQ21vZDBDYQpUWHk0KzMyV1Z [...]
      service:
        name: ks-controller-manager
        namespace: kubesphere-system
        path: /validate-network-kubesphere-io-v1alpha1
        port: 443
    failurePolicy: Fail
    matchPolicy: Exact
    name: validating-network.kubesphere.io
    namespaceSelector:
      matchExpressions:
        - key: control-plane
          operator: DoesNotExist
    objectSelector: {}
    rules:
      - apiGroups:
          - network.kubesphere.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - ippools
        scope: '*'
    sideEffects: None
    timeoutSeconds: 30
---
# Source: ks-core/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: resourcesquotas.quota.kubesphere.io
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFakNDQWZxZ0F3SUJBZ0lRTEVZTnVlNFIrZURaZy9OM3dUNUJBVEFOQmdrcWhraUc5dzBCQVFzRkFEQWoKTVNFd0h3WURWUVFERXhocmN5MWpiMjUwY205c2JHVnlMVzFoYm1GblpYSXRZMkV3SGhjTk1qRXdOVEU0TURjMApNRE15V2hjTk16RXdOVEUyTURjME1ETXlXakFqTVNFd0h3WURWUVFERXhocmN5MWpiMjUwY205c2JHVnlMVzFoCmJtRm5aWEl0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUQyOEJvMzNmR3IKLzN3T0w0Y2Y1LzJnN1o1WlhnTitoTTJpSE4vOXhNaE1rNE1qbVJFd2RDNGtrVGdEa0FYWWh6dnpWQ21vZDBDYQpUWHk0KzMyV1Z [...]
      service:
        name: ks-controller-manager
        namespace: kubesphere-system
        path: /validate-quota-kubesphere-io-v1alpha2
        port: 443
    failurePolicy: Ignore
    matchPolicy: Exact
    name: resourcesquotas.quota.kubesphere.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
      - apiGroups:
          - '*'
        apiVersions:
          - '*'
        operations:
          - CREATE
        resources:
          - pods
        scope: '*'
    sideEffects: None
---
# Source: ks-core/templates/ks-console.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ks-console
    tier: frontend
    version: v3.1.0
  name: ks-console
  namespace: kubesphere-system
spec:
  ports:
    - name: nginx
      nodePort: 30880
      port: 80
      protocol: TCP
      targetPort: 8000

  selector:
    app: ks-console
    tier: frontend
  type: NodePort
---
# Source: ks-core/templates/ks-console.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ks-console
    tier: frontend
    version: v3.1.0
  name: ks-console
  namespace: kubesphere-system
spec:
  strategy:
    rollingUpdate:
      maxSurge: 0
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: ks-console
      tier: frontend
  template:
    metadata:
      labels:
        app: ks-console
        tier: frontend
    spec:
      containers:
        - image: kubesphere/ks-console:v3.1.0
          imagePullPolicy: IfNotPresent
          name: ks-console
          resources:
            limits:
              cpu: 1
              memory: 1024Mi
            requests:
              cpu: 20m
              memory: 100Mi
          volumeMounts:
            - mountPath: /opt/kubesphere/console/server/local_config.yaml
              name: ks-console-config
              subPath: local_config.yaml
            - mountPath: /opt/kubesphere/console/server/sample
              name: sample-bookinfo
            - mountPath: /etc/localtime
              name: host-time
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 15
            timeoutSeconds: 15
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 8
      serviceAccount: kubesphere
      serviceAccountName: kubesphere
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
        - key: CriticalAddonsOnly
          operator: Exists
        - effect: NoExecute
          key: node.kubernetes.io/not-ready
          operator: Exists
          tolerationSeconds: 60
        - effect: NoExecute
          key: node.kubernetes.io/unreachable
          operator: Exists
          tolerationSeconds: 60
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/master
                    operator: In
                    values:
                      - ""
      volumes:
        - configMap:
            defaultMode: 420
            name: ks-console-config
            items:
              - key: local_config.yaml
                path: local_config.yaml
          name: ks-console-config
        - configMap:
            defaultMode: 420
            name: sample-bookinfo
          name: sample-bookinfo
        - hostPath:
            path: /etc/localtime
            type: ""
          name: host-time
---
# Source: ks-core/templates/ks-apiserver.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.io/created-by: kubesphere.io/ks-apiserver
  labels:
    app: ks-apiserver
    tier: backend
    version: v3.1.0
  name: ks-apiserver
  namespace: kubesphere-system
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 9090
  selector:
    app: ks-apiserver
    tier: backend
    # version: v3.1.0
  type: ClusterIP
---
# Source: ks-core/templates/ks-apiserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ks-apiserver
    tier: backend
    version: v3.1.0
  name: ks-apiserver
  namespace: kubesphere-system
spec:
  strategy:
    rollingUpdate:
      maxSurge: 0
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: ks-apiserver
      tier: backend
      # version: v3.1.0
  template:
    metadata:
      labels:
        app: ks-apiserver
        tier: backend
        # version: v3.1.0
    spec:
      containers:
        - command:
            - ks-apiserver
            - --logtostderr=true
            - --kubeconfig=/etc/kubeconfig/kubeconfig
          image: kubesphere/ks-apiserver:v3.1.0
          imagePullPolicy: IfNotPresent
          name: ks-apiserver
          ports:
            - containerPort: 9090
              protocol: TCP
          resources:
            limits:
              cpu: 1
              memory: 1024Mi
            requests:
              cpu: 20m
              memory: 100Mi
          volumeMounts:
            - mountPath: /var/run/docker.sock
              name: docker-sock
            - mountPath: /etc/kubesphere/ingress-controller
              name: ks-router-config
            - mountPath: /etc/kubesphere/
              name: kubesphere-config
            - mountPath: /etc/localtime
              name: host-time
            - mountPath: /etc/kubeconfig
              name: kubeconfig
          livenessProbe:
            failureThreshold: 8
            httpGet:
              path: /kapis/version
              port: 9090
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 15
      serviceAccountName: kubesphere
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
        - key: CriticalAddonsOnly
          operator: Exists
        - effect: NoExecute
          key: node.kubernetes.io/not-ready
          operator: Exists
          tolerationSeconds: 60
        - effect: NoExecute
          key: node.kubernetes.io/unreachable
          operator: Exists
          tolerationSeconds: 60
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/master
                    operator: In
                    values:
                      - ""
      volumes:
        - hostPath:
            path: /var/run/docker.sock
            type: ""
          name: docker-sock
        - configMap:
            defaultMode: 420
            name: ks-router-config
          name: ks-router-config
        - configMap:
            defaultMode: 420
            name: kubesphere-config
          name: kubesphere-config
        - configMap:
            defaultMode: 420
            name: kubeconfig
          name: kubeconfig
        - hostPath:
            path: /etc/localtime
            type: ""
          name: host-time
